--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query-devtools": "^5.48.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
